     - refresh of some patches
  * Reorder freebsd6-buildutils and freebsd7-buildutils in Build-Depends
  * Add build-dependency on quilt, and use quilt in debian/rules
  * arch/i386/586.config and arch/i386/586-smp.config: also support i686 CPU.
  * Changed building rules to be correctly buildable with current binutils
     - add 020_linker.diff and gen-ld-u-options 

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 23 Oct 2007 17:20:02 +0200

kfreebsd-7 (7.0~cvs20071023-1) experimental; urgency=low

  [ Aurelien Jarno ]
  * Initial upload to experimental.

  [ Petr Salinger ]
  * New upstream snapshot of RELENG_7
     - refresh of some patches
  * Restrict some Build-Depends only for kfreebsd architectures

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 23 Oct 2007 17:20:02 +0200

kfreebsd-7 (7.0~cvs20070710-1) unreleased; urgency=low

  [ Petr Salinger ]
  * New upstream snapshot of HEAD
     - drop 000_* patches (already in upstream)
     - drop obsolete 005_grow_arg_max patch
     - update of some remaining patches
  * Disable GPL incompatible "zfs"
  * Build by gcc-4.2

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 11 Jul 2007 07:22:03 +0200

kfreebsd-6 (6.2-3) unreleased; urgency=low

  * debian/rules:
    - add support for ~ in the version number.
    - remove the hack for preliminar snapshots.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 11 Jul 2007 05:12:02 +0200

kfreebsd-6 (6.2-2) unreleased; urgency=low

  * Fix a possible DoS using IPv6 Routing Header 0 (FreeBSD-SA-07:03.ipv6
    / CVE-2007-2242).

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 03 May 2007 16:05:58 +0200

kfreebsd-6 (6.2-1) unreleased; urgency=low

  [ Petr Salinger ]
  * New upstream version (RELENG_6_2_0_RELEASE)
     - drop obsolete 000_kmem, 000_net, 000_ppp, 000_smbfs,
                     002_glibc_dev_isp, 006_proc_mounts patches
     - update 009_disable_duped_modules, 
              903_disable_non-free_drivers,
              999_config patches
