@@ -7,3 +7,22 @@
  OUTPUT_ARCH(i386:x86-64)
  ENTRY(btext)
  SEARCH_DIR("/usr/lib");
+@@ -6,7 +6,7 @@
+ SECTIONS
+ {
+   /* Read-only sections, merged into text segment: */
+-  . = kernbase + 0x00100000 + SIZEOF_HEADERS;
++  . = kernbase + CONSTANT (MAXPAGESIZE) + SIZEOF_HEADERS;
+   .interp         : { *(.interp) }
+   .hash           : { *(.hash) }
+   .dynsym         : { *(.dynsym) }
+@@ -61,7 +61,8 @@
+   .eh_frame_hdr : { *(.eh_frame_hdr) }
+   /* Adjust the address for the data segment.  We want to adjust up to
+      the same address within the page on the next page up.  */
+-  . = DATA_SEGMENT_ALIGN(0x100000, 0x1000);
++  . = ALIGN (CONSTANT (MAXPAGESIZE)) - ((CONSTANT (MAXPAGESIZE) - .) & (CONSTANT (MAXPAGESIZE) - 1));
++  . = DATA_SEGMENT_ALIGN (CONSTANT (MAXPAGESIZE), CONSTANT (COMMONPAGESIZE));
+   /* Ensure the __preinit_array_start label is properly aligned.  We
+      could instead move the label definition inside the section, but
+      the linker would then create the section even if it turns out to
