@@ -8,6 +8,7 @@ kfreebsd-7 (7.0~cvs200712xx-1) UNRELEASED; urgency=low
   * arch/i386/586.config and arch/i386/586-smp.config: also support i686 CPU.
   * Changed building rules to be correctly buildable with current binutils
      - add 020_linker.diff and gen-ld-u-options 
+     - extend 912_binutils.diff
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 23 Oct 2007 17:20:02 +0200
 
